# backend

./: Dockerfile  pyproject.toml
app/: chat.py  db.py  endpoints.py  main.py  middleware.py  requirements.txt
