[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Vigneshd705 <vigneshd705@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
httpx = "^0.27.2"
pydantic = "^2.10.1"
uvicorn = "^0.32.1"
sqlalchemy = "^2.0.36"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
